# musicstealer9000

./: README.md  package-lock.json
ms9k_gui/: package.json
ms9k_gui/src/: index.html  main.js  styles.css
ms9k_gui/src-tauri/: Cargo.toml
ms9k_gui/src-tauri/src/: config.rs  main.rs  spotify_api.rs
src/: events.js  index.html  main.js  pages.js  styles.css
src-tauri/: tauri.conf.json
src-tauri/src/: config.rs  downloader.rs  main.rs  spotify_api.rs  static_types.rs
